--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   dc:
-    image: ${REGISTRY_URI:-instantlinux}/samba-dc:latest
+    image: inetshell/samba-dc:centos7-4.9.4
     restart: always
     network_mode: host
     hostname: ${SAMBADC_HOSTNAME:-dc.example.com}
@@ -10,11 +10,11 @@ services:
       DOMAIN_ACTION: provision
       INTERFACES: ${SAMBADC_INTERFACES:-lo eth0}
       REALM: ${SAMBA_REALM:-ad.example.com}
-      TZ: ${TZ:-UTC}
       WORKGROUP: ${SAMBA_WORKGROUP:-WORKGROUP}
     volumes:
       - etc:/etc/samba
       - lib:/var/lib/samba
+      - /etc/localtime:/etc/localtime:ro
     ports:
       - 53:53
       - 53:53/udp
